fix: Top and bottom amenities are cropped in amenities filter

--- a/modules/openy_map_lb/assets/src/scss/openy-map-lb.scss
+++ b/modules/openy_map_lb/assets/src/scss/openy-map-lb.scss
@@ -157,6 +157,8 @@
 
       li {
         break-inside: avoid-column;
+        display: inline-block;
+        margin-top: 0.175em;
       }
     }
     .amenities-group {
